CSS overflow hidden bug fix for cut off concept labels.

--- a/static/css/vocabulary.css
+++ b/static/css/vocabulary.css
@@ -8,7 +8,7 @@ h1.caption{padding:15px 30px}
     background: -webkit-gradient(radial, 400 300, 0, 400 300, 400, from(#63144a), to(#2f0923));
     color:#fff;border-bottom:1px solid #000}
 
-#infovis{position:relative;top:-30px;left:30px;height:600px;width:600px;margin:0;overflow:hidden;padding:0 0 0 50px}
+#infovis{position:relative;top:-20px;left:30px;height:600px;width:600px;margin:0;padding:0 0 0 50px}
 #vocabulary-list{padding:0 20px 30px 20px;
     -moz-column-width:200px;overflow:auto;-moz-column-gap:1em;-webkit-column-width:200px;-webkit-column-gap:1em}
 #vocabulary-list li{list-style:none;font-size:16px;padding:5px 15px;-webkit-column-break-inside: avoid;}
